--- a/gs/templates/addques.html
+++ b/gs/templates/addques.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form action="{% url 'pro:add_ques' %}" method="POST">
+<form action="{% url 'gs:add_ques' %}" method="POST">
 {% csrf_token %}
     <div style="float: left;">
 	<table>
