--- a/gs/templates/base.html
+++ b/gs/templates/base.html
@@ -2,48 +2,103 @@
 <html lan="en">
 <head>
 	<meta charset="utf-8">
-	<title>Blue Snails {% block extra_title %}{% endblock %}</title>
+	<title>Gyan Mandi {% block extra_title %}{% endblock %}</title>
 	<meta name="description" content="This is not drill">
-	<meta name="author" content="vijju">
+	<meta name="author" content="vijkush">
+
+	{% block extrahead %}
+	{% endblock %}
+
 	<style type="text/css">
-        	html, body {
-                height: 100%;
-                margin: 0;
-   	            padding-top: 60px;
-            }
-            div {
-                height: 100%;
-                background-color: white;
-                float: left;
-            }
-            #left {
-                width:220px;
-                margin: 5px;
-            }
-            #center {
-                margin: 5px 0;
-                width: calc(100% - 460px);
-            }
-            #right {
-                margin: 5px;
-                width: 220px;
-            }
+        html, body {
+            height: 100%;
+            margin-top: 60px;
+	        background: #dddddd;
+        }
+        
+        div {
+            height: 100%;
+            float: left;
+        }
+
+        #sidebar_left {
+            width:256px;
+            margin: 5px;
+        }
+        #center {
+            margin: 5px 0;
+            width: calc(100% - 512px);
+        }
+        #sidebar_right {
+            margin: 5px;
+            width: 220px;
+        }
+	
+	    .header {
+		width: 100%;
+		height: 64px;
+		top: 0;
+		position: fixed;
+		z-index: 0;
+		background: #008442;
+	    }
+
+	    .footer {
+		width: 100%;
+		height: 64px;
+		bottom: 0;
+		background: #008442;
+	    }
+
+        .navi_bar {
+	    list-style-type: none;
+	    margin: 0;
+	    padding: 0;
+        }
+
+	li {
+	    display: inline;
+	    float: left;
+	}
+
+	a:link, a:visited {
+	    display: block;
+	    width: 120px;
+	    font-weight: bold;
+	    color: #FFFFFF;
+	    background-color: #98bf21;
+	    text-align: center;
+	    padding: 4px;
+	    text-decoration: none;
+	    text-transform: uppercase;
+}
+
+	a:hover, a:active {
+	    background-color: #7A991A;
+	}
 
 	</style>
 </head>
 <body>
-
-<div id="left">
+<div class="header">
+<div class="navbar">
+<ul class="navi_bar">
+    <li class="home"><a href="/home">Home</a></li>
+    <li class="daily_quiz"><a href="/quiz">Quiz</a></li>
+    <li class="discuss"><a href="/discuss">Discuss</a></li>
+    <li class="about"><a href="/about">About</a></li>
+</ul>
+</div>
 </div>
 
-<div id="center">
-<center>
+<div class="sidebar" id="sidebar_left"></div>
+
+<div class="main_content" id="center">
 {% block content %}{% endblock %}
-</center>
 </div>
 
-<div id="right">
-</div>
+<div class="sidebar" id="sidebar_right"></div>
+<div class="footer"></div>
 
 </body>
 </html>
